--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,9 @@ Backend/dist/
 Backend/build/
 Backend/logs/
 
+# Ignore ONLY this config.env file (not the whole folder)
+Backend/config/config.env
+
 # Ignore frontend-specific files
 frontend/node_modules/
 frontend/.env
@@ -62,7 +65,6 @@ dashboard/build/
 .vscode/
 *.iml
 *.bak
-
 
 # Python
 __pycache__/
